--- a/app/index.html
+++ b/app/index.html
@@ -159,7 +159,7 @@
   </header>
   
   <main class="main main-page">
-    <section class="section-1 slider-wrap">
+    <section class="section-1 slider-wrap post">
       <div class="slider-center-block">
         <h1 class="title">Скидка 30% <br> на новую коллекцию</h1>
         <a href="" class="title-button">Посмотреть коллекцию</a>
@@ -177,7 +177,7 @@
       </div>
     </section>
 
-    <section class="section-2">
+    <section class="section-2 post">
       <div class="container">
         <div class="row">
           <div class="content">
@@ -207,7 +207,7 @@
       </div>
     </section>
 
-    <section class="section-3">
+    <section class="section-3 post">
       <div class="container">
         <div class="row">
           <div class="content">
@@ -240,7 +240,7 @@
       </div>
     </section> 
 
-    <section class="feedback-block">
+    <section class="feedback-block post">
       <div class="container">
         <div class="row">
           <div class="content">
@@ -387,7 +387,7 @@
       </div>
     </section> 
 
-    <section class="section-5">
+    <section class="section-5 post">
       <div class="container">
         <div class="row">
           <div class="content">
