--- a/app/order.html
+++ b/app/order.html
@@ -184,18 +184,18 @@
                    <input type="text" id="check2" placeholder="Введите фамилию">
                 </div>   
                 <div class="input-wrap">
-                   <label for="check3">Номер телефона</label>
+                   <label for="check3">Номер телефона</label><span>*</span>
                    <input type="text" id="check3" placeholder="Введите телефон">
                 </div>
                 <div class="input-wrap">
-                   <label for="check4">Электронный адрес</label>
+                   <label for="check4">Электронный адрес</label><span>*</span>
                    <input type="text" id="check4" placeholder="Введите e-mail">
                 </div>                
              </div>
              <div class="column right-column col-xs-12 col-sm-6 col-md-5">
                <p class="form-title">Адрес доставки</p>               
                 <div class="input-wrap">
-                   <label for="check5">Ваш город</label>
+                   <label for="check5">Ваш город</label><span>*</span>
                    <input type="text" id="check5" placeholder="Введите город">
                 </div>
                 <div class="input-wrap">
