--- a/app/create.html
+++ b/app/create.html
@@ -174,7 +174,7 @@
 							<div id="tab1" class="tab_content tab_content-1">
 								<a href="" class="create-button" data-toggle="modal" data-target="#myCreateModal">Выберите модель белья</a>
 									<div class="create-wrap">
-										<ul class="create-list clearfix">
+										<ul class="create-list">
 											<li class="create-item">
 												<h2 class="info-title">Пододеяльник</h2>
 												<div class="img-wrap">
