--- a/app/index.html
+++ b/app/index.html
@@ -24,37 +24,130 @@
  
   
   <main class="main" id="fullpage">
-		<div class="section">
-			<video id="bgvid" playsinline autoplay muted loop> 
+		<div class="section section-1" data-anchor="firstSection">
+			<video id="bgvid" playsinline data-autoplay muted loop> 
 			<!--<source src="http://thenewcode.com/assets/videos/polina.webm" type="video/webm">-->
 			<source src="images/video/bg-video.mp4" type="video/mp4">
 			</video>
-				<div class="container">
+				<div class="container flex-container">
 					<ul class="nav__list">
 						<li class="nav__item"><a href="">Comunity</a></li>
 						<li class="nav__item"><a href="">Custumize</a></li>
 						<li class="nav__item"><a href="">Safety</a></li>
 					</ul>
-					<div class="logo-wrap">
+					<div class="logo-wrap img-wrap">
 							<img src="images/logo.png" alt="">
 					</div>
 					<div class="content-wrap" id="txt">
-						<h1 class="title">Virtual Sex &<br>3D Sex Game</h1>					
-						<!--<button>Pause</button>-->
+						<h1 class="title">Virtual Sex &<br>3D Sex Game</h1>						
 					</div>
-					<div class="button-wrap mt-130 mb-130">
+					<div class="button-wrap">
 						<button class="button">Donwload now</button>
 					</div>
 					<ul class="sign-block__list">
 						<li class="sign-block__item"><a href="">Login</a></li>
 						<li class="sign-block__item"><a href="">Register</a></li>
 					</ul>
-				</div>				
+				</div>
+			<!--	<button class="pause-button">Pause</button>	-->
+			
 		</div>
-		<div class="section">Some section</div>
-		<div class="section">Some section</div>
-		<div class="section">Some section</div>
+		<div class="section section-2" data-anchor="secondSection">
+			<div class="container flex-container">
+				<div class="content__right flex-container">
+					<h2 class="title__md">Big and friendly fuck community!</h2>
+					<p class="subtitle">4 567 on-line user</p>
+					<p class="text">WARNING. This thread contains pictures, GIFs and writings that may offend some members. The Thread is for the pleasure of those that enjoy the lifestyle of D/s and BDSM. 
+					</p>
+					<div class="button-wrap">
+						<button class="button white-button">Join Now Free</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="section section-3" data-anchor="thirdSection">
+			<div class="container flex-container">
+				<h3 class="title__sm">Dohots numbers</h3>
+				<ul class="dohots__list">
+					<li class="dohots__item">
+						<i class="icon icon-1"></i>
+						<span class="timer count-title count-number" data-to="260" data-speed="1500"></span>
+						<p class="dohots__label">Models</p>
+					</li>
+					<li class="dohots__item">
+						<i class="icon icon-2"></i>
+						<span class="timer count-title count-number" data-to="800" data-speed="1500"></span>
+						<p class="dohots__label">Sequences</p>
+					</li>
+					<li class="dohots__item">
+						<i class="icon icon-3"></i>
+						<span class="timer count-title count-number" data-to="8000" data-speed="1500"></span>
+						<p class="dohots__label">Clothes</p>
+					</li>
+					<li class="dohots__item">
+						<i class="icon icon-4"></i>
+						<span class="timer count-title count-number" data-to="900" data-speed="1500"></span>
+						<p class="dohots__label">Poses</p>
+					</li>
+				</ul>
+				<div class="button-wrap">
+					<button class="button white-button">Join Now Free</button>
+				</div>
+			</div>
+		</div>
+		<div class="section section-4" data-anchor="fourthSection">
+			<div class="container flex-container">
+				<div class="content__left flex-container">
+					<h2 class="title__md">Wide choice of poses, bodies, accessories!</h2>
+					<p class="text">sex poses, 1000 bodies, clothes and accessories. More than 300 sex variations. Some pictures or GIFs may be quite graphic in nature, even disturbing to some. To others though, it may be part of their real life or just a fantasy that they have yet to explore.
+</p>
+					<div class="button-wrap">
+						<button class="button">Join Now Free</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="section section-5" data-anchor="fifthSection">
+			<div class="container flex-container">
+				<h3 class="title__sm"> Dohots reviews</h3>
+				<div class="column__wrap">					
+					<div class="column__left">
+						<div class="img-wrap img-wrap-border">
+							<img src="images/woman.png" alt="">
+						</div>
+					</div>
+					<div class="column__right">
+						<p class="text__lg">A fun and unique way to live out all your virtual fantasies.</p>
+						<p class="text__italic mt-30 mb-30">A fun and unique way to live out all your virtual fantasies." "Perverted gamers and lovers of virtual 3D porn will have a blast with this one.</p>
+						<p class="text__italic mt-30">Dohots user <a class="text__link" href="">Angelika</a></p>
+					</div>
+				</div>	
+			</div>
+		</div>
+		<div class="section section-6" data-anchor="sixSection">
+		<div class="container flex-container">
+			<div class="content__right flex-container">
+				<h2 class="title__md">Big and friendly fuck community!</h2>
+				<p class="subtitle">4 567 on-line user</p>
+				<p class="text">WARNING. This thread contains pictures, GIFs and writings that may offend some members. The Thread is for the pleasure of those that enjoy the lifestyle of D/s and BDSM. 
+				</p>
+				<div class="button-wrap">
+					<button class="button white-button">Join Now Free</button>
+				</div>
+			</div>
+		</div>
+	</div>		
 	</main>
+	<ul class="nav-buttons__list">
+		<li class="nav-buttons__item"><a href="#firstSection"></a></li>
+		<li class="nav-buttons__item"><a href="#secondSection"></a></li>
+		<li class="nav-buttons__item"><a href="#thirdSection"></a></li>
+		<li class="nav-buttons__item"><a href="#fourthSection"></a></li>
+		<li class="nav-buttons__item"><a href="#fifthSection"></a></li>
+		<li class="nav-buttons__item"><a href="#sixSection"></a></li>
+		<li class="nav-buttons__item"><a href=""></a></li>
+		<li class="nav-buttons__item"><a href=""></a></li>
+	</ul>
 
   
     <!-- build:js scripts/vendor.js -->
@@ -82,7 +175,8 @@
    
     <!-- build:js scripts/main.js -->
     <script src="scripts/jquery.smoothscroll.min.js"></script>
-    <script src="scripts/jquery.viewportchecker.min.js"></script>    
+    <script src="scripts/jquery.viewportchecker.min.js"></script>
+		<script src="scripts/jquery.spincrement.min.js"></script>       
     <script src="scripts/main.js"></script>    
     <!-- endbuild -->
 
