--- a/app/index.html
+++ b/app/index.html
@@ -125,34 +125,112 @@
 			</div>
 		</div>
 		<div class="section section-6" data-anchor="sixSection">
-		<div class="container flex-container">
-			<div class="content__right flex-container">
-				<h2 class="title__md">Big and friendly fuck community!</h2>
-				<p class="subtitle">4 567 on-line user</p>
-				<p class="text">WARNING. This thread contains pictures, GIFs and writings that may offend some members. The Thread is for the pleasure of those that enjoy the lifestyle of D/s and BDSM. 
-				</p>
-				<div class="button-wrap">
-					<button class="button white-button">Join Now Free</button>
+			<div class="container flex-container">
+				<div class="content__right flex-container">
+					<h2 class="title__md">Big and friendly fuck community!</h2>
+					<p class="subtitle">4 567 on-line user</p>
+					<p class="text">WARNING. This thread contains pictures, GIFs and writings that may offend some members. The Thread is for the pleasure of those that enjoy the lifestyle of D/s and BDSM. 
+					</p>
+					<div class="button-wrap">
+						<button class="button white-button">Join Now Free</button>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>		
-	</main>
-	<ul class="nav-buttons__list">
-		<li class="nav-buttons__item"><a href="#firstSection"></a></li>
-		<li class="nav-buttons__item"><a href="#secondSection"></a></li>
-		<li class="nav-buttons__item"><a href="#thirdSection"></a></li>
-		<li class="nav-buttons__item"><a href="#fourthSection"></a></li>
-		<li class="nav-buttons__item"><a href="#fifthSection"></a></li>
-		<li class="nav-buttons__item"><a href="#sixSection"></a></li>
-		<li class="nav-buttons__item"><a href=""></a></li>
-		<li class="nav-buttons__item"><a href=""></a></li>
-	</ul>
-
-  
+		<div class="section section-7" data-anchor="sevenSection">		
+			<div class="video-wrap" id="v1">               
+				<video controls="controls" >                 
+					<source src="images/video/video-1.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>                                  
+				</video>
+			</div>
+			<div class="video-wrap" id="v2">               
+				<video controls="controls">                 
+					<source src="images/video/video-2.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>                                  
+				</video>
+			</div>                
+			<div class="slider-block">
+				<div class="popup-gallery">
+						<a href="images/video/video-1.mp4" class="video-slide">
+								<img src="images/img-1.jpg" >
+						</a>
+						<a href="images/img-2.jpg">
+								<img src="images/img-2.jpg">
+						</a>
+						<a href="">
+								<img src="images/img-3.jpg">
+						</a>
+						<a href="">
+								<img src="images/img-4.jpg">
+						</a>
+						<a href="">
+							<div class="popup-gallery__title-block">
+									<h3 class="title__sm"> Gallery-game</h3>
+									<p class="text">More photo and video</p>
+							</div>
+						</a>
+						<a href="">
+								<img src="images/img-5.jpg">
+						</a>
+						<a href="">
+							<img src="images/img-6.jpg">
+						</a>
+						<a href="" class="video-slide">
+								<img src="images/img-1.jpg">
+						</a>
+						<a href="">
+							<img src="images/img-2.jpg">
+						</a>
+				</div>
+			</div>			
+		</div>
+		<div class="section section-8" data-anchor="eightSection">
+			<div class="container flex-container">			
+				<h3 class="title__sm">Dohots news</h3>				
+				<div class="news__list">
+					<a href="" class="news__item">
+						<div class="img-wrap">
+							<img src="images/img-1.jpg" alt="">
+						</div>
+						<p class="news-text">Doggy style female to female Doggy style female to female</p>
+					</a>
+					<a href="" class="news__item">
+						<div class="img-wrap">
+							<img src="images/img-2.jpg" alt="">
+						</div>
+						<p class="news-text">Doggy style female to female</p>
+					</a>
+					<a href="" class="news__item">
+						<div class="img-wrap">
+							<img src="images/img-3.jpg" alt="">
+						</div>
+						<p class="news-text">Doggy style female to female</p>
+					</a>
+						<a href="" class="news__item">
+						<div class="img-wrap">
+							<img src="images/img-4.jpg" alt="">
+						</div>
+						<p class="news-text">Doggy style female to female</p>
+					</a>
+						<a href="" class="news__item">
+						<div class="img-wrap">
+							<img src="images/img-5.jpg" alt="">
+						</div>
+						<p class="news-text">Doggy style female to female</p>
+					</a>
+						<a href="" class="news__item">
+						<div class="img-wrap">
+							<img src="images/img-6.jpg" alt="">
+						</div>
+						<p class="news-text">Doggy style female to female</p>
+					</a>
+				</div>
+			</div>
+		</div>				
+	</main>  
     <!-- build:js scripts/vendor.js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>  
-		<script src="/bower_components/fullpage.js/dist/jquery.fullpage.min.js"></script>  
+		<script src="/bower_components/fullpage.js/dist/jquery.fullpage.min.js"></script>
+		<script src="/bower_components/magnific-popup/dist/jquery.magnific-popup.min.js"></script>   
     
     <!-- endbuild -->
 
@@ -176,7 +254,8 @@
     <!-- build:js scripts/main.js -->
     <script src="scripts/jquery.smoothscroll.min.js"></script>
     <script src="scripts/jquery.viewportchecker.min.js"></script>
-		<script src="scripts/jquery.spincrement.min.js"></script>       
+		<script src="scripts/jquery.spincrement.min.js"></script>
+		<script src="scripts/jquery.shorten.1.0.js"></script>       
     <script src="scripts/main.js"></script>    
     <!-- endbuild -->
 
