--- a/app/index.html
+++ b/app/index.html
@@ -225,7 +225,55 @@
 					</a>
 				</div>
 			</div>
-		</div>				
+		</div>
+		<div class="section section-9" data-anchor="nineSection">
+			<div class="container flex-container">
+				<div class="footer__wrap">
+					<div class="footer__left-column">
+						<ul class="social__list">
+							<li class="social__item">
+								<a href="">
+									<img src="images/fb.png" alt="">
+								</a>
+							</li>
+								<li class="social__item">
+								<a href="">
+									<img src="images/tg.png" alt="">
+								</a>
+							</li>
+								<li class="social__item">
+								<a href="">
+									<img src="images/tw.png" alt="">
+								</a>
+							</li>
+								<li class="social__item">
+								<a href="">
+									<img src="images/vk.png" alt="">
+								</a>
+							</li>
+						</ul>
+						<div class="banner__block">
+							<div class="img-wrap">
+								<img src="images/banner.png" alt="">
+							</div>															
+						</div>
+						<p class="footer__text">All models whose images and videos appear on this site or as part of the Dohots software are fully virtual and are over the age of 18.</p>	
+					</div>
+						<div class="footer__right-column">
+							<div class="contacts-block">
+								<p class="thin-title">Contact us</p>
+								<a href="" class="contact-text__link">Phone: 77-777-777</a>
+								<a href="" class="contact-text__link">E-mail: mail@gmail.com</a>
+							</div>
+							<div class="other-block">
+								<a href="" class="thin-title__link">How to start with AChat</a>
+								<a href="" class="thin-title__link">Earn a living with us</a>
+							</div>
+							<p class="footer__text">All models whose images and videos appear on this site or as part of the Dohots software are fully virtual and are over the age of 18.</p>	
+					</div>
+				</div>	
+			</div>
+		</div>	
 	</main>  
     <!-- build:js scripts/vendor.js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>  
