--- a/app/index.html
+++ b/app/index.html
@@ -7,12 +7,10 @@
     <title>Page</title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <!-- Place favicon.ico in the root directory -->
-
-   
+    <!-- Place favicon.ico in the root directory -->   
 
     <!-- build:css styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">    
+    <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->    
   </head>
 
@@ -27,22 +25,23 @@
 		<div class="section section-1" data-anchor="firstSection">
 			<video id="bgvid" playsinline data-autoplay muted loop> 
 			<!--<source src="http://thenewcode.com/assets/videos/polina.webm" type="video/webm">-->
-			<source src="images/video/bg-video.mp4" type="video/mp4">
+		<!--	<source src="images/video/bg-video.mp4" type="video/mp4">-->
 			</video>
 				<div class="container flex-container">
 					<ul class="nav__list">
 						<li class="nav__item"><a href="">Comunity</a></li>
-						<li class="nav__item"><a href="">Custumize</a></li>
+						<li class="nav__item">
+							<a href="" class="logo logo-ret">
+								<img src="images/logo.png" alt="">
+							</a>
+						</li>
 						<li class="nav__item"><a href="">Safety</a></li>
-					</ul>
-					<div class="logo-wrap img-wrap">
-							<img src="images/logo.png" alt="">
-					</div>
+					</ul>					
 					<div class="content-wrap" id="txt">
-						<h1 class="title">Virtual Sex &<br>3D Sex Game</h1>						
+						<h1 class="title show">Virtual Sex &<br>3D Sex Game</h1>
 					</div>
 					<div class="button-wrap">
-						<button class="button">Donwload now</button>
+						<button class="button zoom">Donwload now</button>
 					</div>
 					<ul class="sign-block__list">
 						<li class="sign-block__item"><a href="">Login</a></li>
@@ -55,42 +54,66 @@
 		<div class="section section-2" data-anchor="secondSection">
 			<div class="container flex-container">
 				<div class="content__right flex-container">
-					<h2 class="title__md">Big and friendly fuck community!</h2>
+					<h2 class="title__md show-2">Big and friendly fuck community!</h2>
 					<p class="subtitle">4 567 on-line user</p>
 					<p class="text">WARNING. This thread contains pictures, GIFs and writings that may offend some members. The Thread is for the pleasure of those that enjoy the lifestyle of D/s and BDSM. 
 					</p>
 					<div class="button-wrap">
-						<button class="button white-button">Join Now Free</button>
+						<button class="button white-button zoom-2">Join Now Free</button>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="section section-3" data-anchor="thirdSection">
 			<div class="container flex-container">
-				<h3 class="title__sm">Dohots numbers</h3>
+				<h3 class="title__sm show-3">Dohots numbers</h3>
 				<ul class="dohots__list">
 					<li class="dohots__item">
-						<i class="icon icon-1"></i>
-						<span class="timer count-title count-number" data-to="260" data-speed="1500"></span>
+						<ul class="slot slot-1">
+							<li><i class="icon icon-1"></i></li>
+							<li><i class="icon icon-2"></i></li>
+							<li><i class="icon icon-3"></i></li>
+							<li><i class="icon icon-4"></i></li>							
+						</ul>						
+						<span class="timer count-title count-number" data-to="260"></span>
 						<p class="dohots__label">Models</p>
 					</li>
 					<li class="dohots__item">
-						<i class="icon icon-2"></i>
-						<span class="timer count-title count-number" data-to="800" data-speed="1500"></span>
+						<ul class="slot slot-2">
+							<li><i class="icon icon-1"></i></li>
+							<li><i class="icon icon-2"></i></li>
+							<li><i class="icon icon-3"></i></li>
+							<li><i class="icon icon-4"></i></li>							
+						</ul>		
+						<span class="timer count-title count-number" data-to="800"></span>
 						<p class="dohots__label">Sequences</p>
 					</li>
 					<li class="dohots__item">
-						<i class="icon icon-3"></i>
-						<span class="timer count-title count-number" data-to="8000" data-speed="1500"></span>
+						<ul class="slot slot-3">
+							<li><i class="icon icon-1"></i></li>
+							<li><i class="icon icon-2"></i></li>
+							<li><i class="icon icon-3"></i></li>
+							<li><i class="icon icon-4"></i></li>							
+						</ul>		
+						<span class="timer count-title count-number" data-to="8000"></span>
 						<p class="dohots__label">Clothes</p>
 					</li>
 					<li class="dohots__item">
-						<i class="icon icon-4"></i>
-						<span class="timer count-title count-number" data-to="900" data-speed="1500"></span>
+						<ul class="slot slot-4">
+							<li><i class="icon icon-1"></i></li>
+							<li><i class="icon icon-2"></i></li>
+							<li><i class="icon icon-3"></i></li>
+							<li><i class="icon icon-4"></i></li>							
+						</ul>		
+						<span class="timer count-title count-number" data-to="900"></span>
 						<p class="dohots__label">Poses</p>
 					</li>
 				</ul>
-				<div class="button-wrap">
+				<input type="button" class="playBtn" id="playBtn_1" value="play">
+				<input type="button" class="playBtn" id="playBtn_2" value="play">
+				<input type="button" class="playBtn" id="playBtn_3" value="play">
+				<input type="button" class="playBtn" id="playBtn_4" value="play">
+				<div class="button-wrap zoom-3">
 					<button class="button white-button">Join Now Free</button>
 				</div>
 			</div>
@@ -98,47 +121,43 @@
 		<div class="section section-4" data-anchor="fourthSection">
 			<div class="container flex-container">
 				<div class="content__left flex-container">
-					<h2 class="title__md">Wide choice of poses, bodies, accessories!</h2>
+					<h2 class="title__md show-4">Wide choice of poses, bodies, accessories!</h2>
 					<p class="text">sex poses, 1000 bodies, clothes and accessories. More than 300 sex variations. Some pictures or GIFs may be quite graphic in nature, even disturbing to some. To others though, it may be part of their real life or just a fantasy that they have yet to explore.
 </p>
-					<div class="button-wrap">
+					<div class="button-wrap zoom-4">
 						<button class="button">Join Now Free</button>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="section section-5" data-anchor="fifthSection">
+			<div class="img-wrap deg">
+				<img src="images/feedback-img.jpg" alt="">
+			</div>
 			<div class="container flex-container">
-				<h3 class="title__sm"> Dohots reviews</h3>
-				<div class="column__wrap">					
-					<div class="column__left">
-						<div class="img-wrap img-wrap-border">
-							<img src="images/woman.png" alt="">
-						</div>
-					</div>
-					<div class="column__right">
-						<p class="text__lg">A fun and unique way to live out all your virtual fantasies.</p>
-						<p class="text__italic mt-30 mb-30">A fun and unique way to live out all your virtual fantasies." "Perverted gamers and lovers of virtual 3D porn will have a blast with this one.</p>
-						<p class="text__italic mt-30">Dohots user <a class="text__link" href="">Angelika</a></p>
-					</div>
+				<h3 class="title__sm"> Dohots reviews</h3>				
+				<div class="content__right flex-container">			
+					<p class="text__lg">A fun and unique way to live out all your virtual fantasies.</p>
+					<p class="text__italic mt-30 mb-30">A fun and unique way to live out all your virtual fantasies." "Perverted gamers and lovers of virtual 3D porn will have a blast with this one.</p>
+					<p class="text__italic mt-30">Dohots user <a class="text__link" href="">Angelika</a></p>			
 				</div>	
 			</div>
 		</div>
 		<div class="section section-6" data-anchor="sixSection">
 			<div class="container flex-container">
 				<div class="content__right flex-container">
-					<h2 class="title__md">Big and friendly fuck community!</h2>
+					<h2 class="title__md show-6">Big and friendly fuck community!</h2>
 					<p class="subtitle">4 567 on-line user</p>
 					<p class="text">WARNING. This thread contains pictures, GIFs and writings that may offend some members. The Thread is for the pleasure of those that enjoy the lifestyle of D/s and BDSM. 
 					</p>
-					<div class="button-wrap">
+					<div class="button-wrap zoom-6">
 						<button class="button white-button">Join Now Free</button>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="section section-7" data-anchor="sevenSection">		
-			<div class="video-wrap" id="v1">               
+		<!--	<div class="video-wrap" id="v1">               
 				<video controls="controls" >                 
 					<source src="images/video/video-1.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>                                  
 				</video>
@@ -150,151 +169,46 @@
 			</div>                
 			<div class="slider-block">
 				<div class="popup-gallery">
-						<a href="images/video/video-1.mp4" class="video-slide">
+						<a class="popup-link video-slide">
 								<img src="images/img-1.jpg" >
 						</a>
-						<a href="images/img-2.jpg">
+						<a class="popup-link">
 								<img src="images/img-2.jpg">
 						</a>
-						<a href="">
+						<a class="popup-link">
 								<img src="images/img-3.jpg">
 						</a>
-						<a href="">
+						<a class="popup-link">
 								<img src="images/img-4.jpg">
 						</a>
-						<a href="">
+						<a>
 							<div class="popup-gallery__title-block">
-									<h3 class="title__sm"> Gallery-game</h3>
-									<p class="text">More photo and video</p>
+									<h3 class="title__sm down"> Gallery-game</h3>
+									<p class="text post">More photo and video</p>
 							</div>
 						</a>
-						<a href="">
+						<a class="popup-link">
 								<img src="images/img-5.jpg">
 						</a>
-						<a href="">
+						<a class="popup-link">
 							<img src="images/img-6.jpg">
 						</a>
-						<a href="" class="video-slide">
-								<img src="images/img-1.jpg">
+						<a class="popup-link video-slide">
+								<img src="images/img-7.jpg">
 						</a>
-						<a href="">
-							<img src="images/img-2.jpg">
+						<a class="popup-link">
+							<img src="images/img-8.jpg">
 						</a>
 				</div>
 			</div>			
-		</div>
-		<div class="section section-8" data-anchor="eightSection">
-			<div class="container flex-container">			
-				<h3 class="title__sm">Dohots news</h3>				
-				<div class="news__list">
-					<a href="" class="news__item">
-						<div class="img-wrap">
-							<img src="images/img-1.jpg" alt="">
-						</div>
-						<p class="news-text">Doggy style female to female Doggy style female to female</p>
-					</a>
-					<a href="" class="news__item">
-						<div class="img-wrap">
-							<img src="images/img-2.jpg" alt="">
-						</div>
-						<p class="news-text">Doggy style female to female</p>
-					</a>
-					<a href="" class="news__item">
-						<div class="img-wrap">
-							<img src="images/img-3.jpg" alt="">
-						</div>
-						<p class="news-text">Doggy style female to female</p>
-					</a>
-						<a href="" class="news__item">
-						<div class="img-wrap">
-							<img src="images/img-4.jpg" alt="">
-						</div>
-						<p class="news-text">Doggy style female to female</p>
-					</a>
-						<a href="" class="news__item">
-						<div class="img-wrap">
-							<img src="images/img-5.jpg" alt="">
-						</div>
-						<p class="news-text">Doggy style female to female</p>
-					</a>
-						<a href="" class="news__item">
-						<div class="img-wrap">
-							<img src="images/img-6.jpg" alt="">
-						</div>
-						<p class="news-text">Doggy style female to female</p>
-					</a>
-				</div>
-			</div>
-		</div>
-		<div class="section section-9" data-anchor="nineSection">
-			<div class="container flex-container">
-				<div class="footer__wrap">
-					<div class="footer__left-column">
-						<ul class="social__list">
-							<li class="social__item">
-								<a href="">
-									<img src="images/fb.png" alt="">
-								</a>
-							</li>
-								<li class="social__item">
-								<a href="">
-									<img src="images/tg.png" alt="">
-								</a>
-							</li>
-								<li class="social__item">
-								<a href="">
-									<img src="images/tw.png" alt="">
-								</a>
-							</li>
-								<li class="social__item">
-								<a href="">
-									<img src="images/vk.png" alt="">
-								</a>
-							</li>
-						</ul>
-						<div class="banner__block">
-							<div class="img-wrap">
-								<img src="images/banner.png" alt="">
-							</div>															
-						</div>
-						<p class="footer__text">All models whose images and videos appear on this site or as part of the Dohots software are fully virtual and are over the age of 18.</p>	
-					</div>
-						<div class="footer__right-column">
-							<div class="contacts-block">
-								<p class="thin-title">Contact us</p>
-								<a href="" class="contact-text__link">Phone: 77-777-777</a>
-								<a href="" class="contact-text__link">E-mail: mail@gmail.com</a>
-							</div>
-							<div class="other-block">
-								<a href="" class="thin-title__link">How to start with AChat</a>
-								<a href="" class="thin-title__link">Earn a living with us</a>
-							</div>
-							<p class="footer__text">All models whose images and videos appear on this site or as part of the Dohots software are fully virtual and are over the age of 18.</p>	
-					</div>
-				</div>	
-			</div>
-		</div>	
+		</div>-->			
 	</main>  
     <!-- build:js scripts/vendor.js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>  
 		<script src="/bower_components/fullpage.js/dist/jquery.fullpage.min.js"></script>
-		<script src="/bower_components/magnific-popup/dist/jquery.magnific-popup.min.js"></script>   
+		<script src="/bower_components/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
+		<script src="/bower_components/jquery-countTo/jquery.countTo.js"></script>
     
-    <!-- endbuild -->
-
-    <!-- build:js scripts/plugins.js -->
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/affix.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/alert.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/modal.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/transition.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/button.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/popover.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/carousel.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/scrollspy.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
     <!-- endbuild -->
 
     
@@ -303,7 +217,9 @@
     <script src="scripts/jquery.smoothscroll.min.js"></script>
     <script src="scripts/jquery.viewportchecker.min.js"></script>
 		<script src="scripts/jquery.spincrement.min.js"></script>
-		<script src="scripts/jquery.shorten.1.0.js"></script>       
+		<script src="scripts/jquery.shorten.1.0.js"></script>
+		<script src="scripts/jquery.jSlots.js"></script>		
+		<script src="scripts/jquery.easing.1.3.js"></script>     
     <script src="scripts/main.js"></script>    
     <!-- endbuild -->
 
