--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->    
+    <!-- endbuild -->		  
   </head>
 
   <body>
@@ -19,14 +19,14 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
   
- 
+ <div id="p_prldr"><div class="contpre"><span class="svg_anm"></span><br>download<br></div></div>
+
   
   <main class="main" id="fullpage">
 		<div class="section section-1" data-anchor="firstSection">
-			<video id="bgvid" playsinline data-autoplay muted loop> 
-			<!--<source src="http://thenewcode.com/assets/videos/polina.webm" type="video/webm">-->
-		<!--	<source src="images/video/bg-video.mp4" type="video/mp4">-->
-			</video>
+		<!--	<video id="bgvid" playsinline data-autoplay muted loop> 			
+				<source src="images/video/bg-video.mp4" type="video/mp4">
+			</video>-->
 				<div class="container flex-container">
 					<ul class="nav__list">
 						<li class="nav__item"><a href="">Comunity</a></li>
@@ -41,14 +41,14 @@
 						<h1 class="title show">Virtual Sex &<br>3D Sex Game</h1>
 					</div>
 					<div class="button-wrap">
-						<button class="button zoom">Donwload now</button>
+						<button class="button zoom">Download now</button>
 					</div>
 					<ul class="sign-block__list">
 						<li class="sign-block__item"><a href="">Login</a></li>
 						<li class="sign-block__item"><a href="">Register</a></li>
 					</ul>
 				</div>
-			<!--	<button class="pause-button">Pause</button>	-->
+				
 			
 		</div>
 		<div class="section section-2" data-anchor="secondSection">
@@ -75,7 +75,7 @@
 							<li><i class="icon icon-3"></i></li>
 							<li><i class="icon icon-4"></i></li>							
 						</ul>						
-						<span class="timer count-title count-number" data-to="260"></span>
+						<span class="timer count-title count-number" data-to="260">0</span>
 						<p class="dohots__label">Models</p>
 					</li>
 					<li class="dohots__item">
@@ -85,7 +85,7 @@
 							<li><i class="icon icon-3"></i></li>
 							<li><i class="icon icon-4"></i></li>							
 						</ul>		
-						<span class="timer count-title count-number" data-to="800"></span>
+						<span class="timer count-title count-number" data-to="800">0</span>
 						<p class="dohots__label">Sequences</p>
 					</li>
 					<li class="dohots__item">
@@ -95,7 +95,7 @@
 							<li><i class="icon icon-3"></i></li>
 							<li><i class="icon icon-4"></i></li>							
 						</ul>		
-						<span class="timer count-title count-number" data-to="8000"></span>
+						<span class="timer count-title count-number" data-to="8000">0</span>
 						<p class="dohots__label">Clothes</p>
 					</li>
 					<li class="dohots__item">
@@ -105,7 +105,7 @@
 							<li><i class="icon icon-3"></i></li>
 							<li><i class="icon icon-4"></i></li>							
 						</ul>		
-						<span class="timer count-title count-number" data-to="900"></span>
+						<span class="timer count-title count-number" data-to="900">0</span>
 						<p class="dohots__label">Poses</p>
 					</li>
 				</ul>
@@ -118,12 +118,12 @@
 				</div>
 			</div>
 		</div>
-		<div class="section section-4" data-anchor="fourthSection">
+		<!--<div class="section section-4" data-anchor="fourthSection">
 			<div class="container flex-container">
 				<div class="content__left flex-container">
 					<h2 class="title__md show-4">Wide choice of poses, bodies, accessories!</h2>
 					<p class="text">sex poses, 1000 bodies, clothes and accessories. More than 300 sex variations. Some pictures or GIFs may be quite graphic in nature, even disturbing to some. To others though, it may be part of their real life or just a fantasy that they have yet to explore.
-</p>
+					</p>
 					<div class="button-wrap zoom-4">
 						<button class="button">Join Now Free</button>
 					</div>
@@ -131,12 +131,12 @@
 			</div>
 		</div>
 		<div class="section section-5" data-anchor="fifthSection">
-			<div class="img-wrap deg">
+			<div class="img-wrap">
 				<img src="images/feedback-img.jpg" alt="">
 			</div>
 			<div class="container flex-container">
-				<h3 class="title__sm"> Dohots reviews</h3>				
-				<div class="content__right flex-container">			
+				<h3 class="title__sm show-5"> Dohots reviews</h3>				
+				<div class="content__right flex-container post">			
 					<p class="text__lg">A fun and unique way to live out all your virtual fantasies.</p>
 					<p class="text__italic mt-30 mb-30">A fun and unique way to live out all your virtual fantasies." "Perverted gamers and lovers of virtual 3D porn will have a blast with this one.</p>
 					<p class="text__italic mt-30">Dohots user <a class="text__link" href="">Angelika</a></p>			
@@ -155,53 +155,53 @@
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="section section-7" data-anchor="sevenSection">		
-		<!--	<div class="video-wrap" id="v1">               
-				<video controls="controls" >                 
-					<source src="images/video/video-1.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>                                  
-				</video>
-			</div>
-			<div class="video-wrap" id="v2">               
-				<video controls="controls">                 
-					<source src="images/video/video-2.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>                                  
-				</video>
-			</div>                
-			<div class="slider-block">
-				<div class="popup-gallery">
-						<a class="popup-link video-slide">
-								<img src="images/img-1.jpg" >
-						</a>
-						<a class="popup-link">
-								<img src="images/img-2.jpg">
-						</a>
-						<a class="popup-link">
-								<img src="images/img-3.jpg">
-						</a>
-						<a class="popup-link">
-								<img src="images/img-4.jpg">
-						</a>
-						<a>
-							<div class="popup-gallery__title-block">
-									<h3 class="title__sm down"> Gallery-game</h3>
-									<p class="text post">More photo and video</p>
-							</div>
-						</a>
-						<a class="popup-link">
-								<img src="images/img-5.jpg">
-						</a>
-						<a class="popup-link">
-							<img src="images/img-6.jpg">
-						</a>
-						<a class="popup-link video-slide">
-								<img src="images/img-7.jpg">
-						</a>
-						<a class="popup-link">
-							<img src="images/img-8.jpg">
-						</a>
+		</div>-->
+		<!--<div class="section section-7" data-anchor="sevenSection">-->		
+			<div class="video-wrap" id="v1">               
+					<video controls="controls" >                 
+						<source src="images/video/video-1.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>                                  
+					</video>
 				</div>
+				<div class="video-wrap" id="v2">               
+					<video controls="controls">                 
+						<source src="images/video/video-2.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>                                  
+					</video>
+				</div>                
+				<div class="slider-block">
+					<div class="popup-gallery">
+							<a class="popup-link video-slide">
+									<img src="images/img-1.jpg" >
+							</a>
+							<a class="popup-link">
+									<img src="images/img-2.jpg">
+							</a>
+							<a class="popup-link">
+									<img src="images/img-3.jpg">
+							</a>
+							<a class="popup-link">
+									<img src="images/img-4.jpg">
+							</a>
+							<a>
+								<div class="popup-gallery__title-block">
+										<h3 class="title__sm down"> Gallery-game</h3>
+										<p class="text post">More photo and video</p>
+								</div>
+							</a>
+							<a class="popup-link">
+									<img src="images/img-5.jpg">
+							</a>
+							<a class="popup-link">
+								<img src="images/img-6.jpg">
+							</a>
+							<a class="popup-link video-slide">
+									<img src="images/img-7.jpg">
+							</a>
+							<a class="popup-link">
+								<img src="images/img-8.jpg">
+							</a>
+					</div>
+				</div>			
 			</div>			
-		</div>-->			
 	</main>  
     <!-- build:js scripts/vendor.js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>  
@@ -220,7 +220,15 @@
 		<script src="scripts/jquery.shorten.1.0.js"></script>
 		<script src="scripts/jquery.jSlots.js"></script>		
 		<script src="scripts/jquery.easing.1.3.js"></script>     
-    <script src="scripts/main.js"></script>    
+    <script src="scripts/main.js"></script>
+
+		<script type="text/javascript">$(window).on('load', function () {
+			var $preloader = $('#p_prldr'),
+					$svg_anm   = $preloader.find('.svg_anm');
+			$svg_anm.fadeOut();
+			$preloader.delay(500).fadeOut('slow');
+			});
+	</script>      
     <!-- endbuild -->
 
   </body>
