--- a/app/index.html
+++ b/app/index.html
@@ -19,14 +19,14 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
   
- <div id="p_prldr"><div class="contpre"><span class="svg_anm"></span><br>download<br></div></div>
+ <div id="p_prldr"><div class="contpre"><span class="svg_anm"></div></div>
 
   
   <main class="main" id="fullpage">
 		<div class="section section-1" data-anchor="firstSection">
-		<!--	<video id="bgvid" playsinline data-autoplay muted loop> 			
+			<video id="bgvid" playsinline data-autoplay muted loop> 			
 				<source src="images/video/bg-video.mp4" type="video/mp4">
-			</video>-->
+			</video>
 				<div class="container flex-container">
 					<ul class="nav__list">
 						<li class="nav__item"><a href="">Comunity</a></li>
@@ -38,7 +38,7 @@
 						<li class="nav__item"><a href="">Safety</a></li>
 					</ul>					
 					<div class="content-wrap" id="txt">
-						<h1 class="title show">Virtual Sex &<br>3D Sex Game</h1>
+						<h1 class="title show">Meet new sex<br>partners in 3D</h1>
 					</div>
 					<div class="button-wrap">
 						<button class="button zoom">Download now</button>
@@ -54,10 +54,9 @@
 		<div class="section section-2" data-anchor="secondSection">
 			<div class="container flex-container">
 				<div class="content__right flex-container">
-					<h2 class="title__md show-2">Big and friendly fuck community!</h2>
-					<p class="subtitle">4 567 on-line user</p>
-					<p class="text">WARNING. This thread contains pictures, GIFs and writings that may offend some members. The Thread is for the pleasure of those that enjoy the lifestyle of D/s and BDSM. 
-					</p>
+					<h2 class="title__md show-2">One of the world biggest online fuck community</h2>
+					<p class="subtitle">1 084 778 members and growing!</p>
+					<p class="text">Meet, chat and have sex with thousands of open-minded men, women and transgenders from all over the world!</p>
 					<div class="button-wrap">
 						<button class="button white-button zoom-2">Join Now Free</button>
 					</div>
@@ -75,8 +74,8 @@
 							<li><i class="icon icon-3"></i></li>
 							<li><i class="icon icon-4"></i></li>							
 						</ul>						
-						<span class="timer count-title count-number" data-to="260">0</span>
-						<p class="dohots__label">Models</p>
+						<span class="timer count-title count-number" data-to="1500">0</span>
+						<p class="dohots__label">MODELS</p>
 					</li>
 					<li class="dohots__item">
 						<ul class="slot slot-2">
@@ -85,8 +84,8 @@
 							<li><i class="icon icon-3"></i></li>
 							<li><i class="icon icon-4"></i></li>							
 						</ul>		
-						<span class="timer count-title count-number" data-to="800">0</span>
-						<p class="dohots__label">Sequences</p>
+						<span class="timer count-title count-number" data-to="18">0</span>
+						<p class="dohots__label">LOCATIONS</p>
 					</li>
 					<li class="dohots__item">
 						<ul class="slot slot-3">
@@ -95,8 +94,8 @@
 							<li><i class="icon icon-3"></i></li>
 							<li><i class="icon icon-4"></i></li>							
 						</ul>		
-						<span class="timer count-title count-number" data-to="8000">0</span>
-						<p class="dohots__label">Clothes</p>
+						<span class="timer count-title count-number" data-to="10000">0</span>
+						<p class="dohots__label">CLOTHES & TOYS</p>
 					</li>
 					<li class="dohots__item">
 						<ul class="slot slot-4">
@@ -105,7 +104,7 @@
 							<li><i class="icon icon-3"></i></li>
 							<li><i class="icon icon-4"></i></li>							
 						</ul>		
-						<span class="timer count-title count-number" data-to="900">0</span>
+						<span class="timer count-title count-number" data-to="496">0</span>
 						<p class="dohots__label">Poses</p>
 					</li>
 				</ul>
@@ -118,12 +117,11 @@
 				</div>
 			</div>
 		</div>
-		<!--<div class="section section-4" data-anchor="fourthSection">
+		<div class="section section-4" data-anchor="fourthSection">
 			<div class="container flex-container">
 				<div class="content__left flex-container">
-					<h2 class="title__md show-4">Wide choice of poses, bodies, accessories!</h2>
-					<p class="text">sex poses, 1000 bodies, clothes and accessories. More than 300 sex variations. Some pictures or GIFs may be quite graphic in nature, even disturbing to some. To others though, it may be part of their real life or just a fantasy that they have yet to explore.
-					</p>
+					<h2 class="title__md show-4">Explore alternative sexual lifestyles</h2>
+					<p class="text">Over 496 sex positions and more than 10000 sex actions including group sex and a decent number of fetish entertainments. Find new fuck buddies and have great tet-a-tet intimate rendezvous or crazy group sex parties! In-game partner search and chat will help you to find an ally for any venture.</p>
 					<div class="button-wrap zoom-4">
 						<button class="button">Join Now Free</button>
 					</div>
@@ -137,26 +135,27 @@
 			<div class="container flex-container">
 				<h3 class="title__sm show-5"> Dohots reviews</h3>				
 				<div class="content__right flex-container post">			
-					<p class="text__lg">A fun and unique way to live out all your virtual fantasies.</p>
-					<p class="text__italic mt-30 mb-30">A fun and unique way to live out all your virtual fantasies." "Perverted gamers and lovers of virtual 3D porn will have a blast with this one.</p>
-					<p class="text__italic mt-30">Dohots user <a class="text__link" href="">Angelika</a></p>			
+					<p class="text__lg">Achat is the simplest and most straightforward sex game out of all the sex mmorpgs.<br>
+						<a href="">http://www.sexmmorpg.net</a>
+					</p>
+					<p class="text__italic mt-30 mb-30"> Download the game and start another life in the virtual world where all your sex fantasies and interests become real as never. </p>
+					<p class="text__italic mt-30"> <a class="text__link" href="">http://games4guys.net</a></p>			
 				</div>	
 			</div>
 		</div>
 		<div class="section section-6" data-anchor="sixSection">
 			<div class="container flex-container">
 				<div class="content__right flex-container">
-					<h2 class="title__md show-6">Big and friendly fuck community!</h2>
-					<p class="subtitle">4 567 on-line user</p>
-					<p class="text">WARNING. This thread contains pictures, GIFs and writings that may offend some members. The Thread is for the pleasure of those that enjoy the lifestyle of D/s and BDSM. 
-					</p>
+					<h2 class="title__md show-6">Hang out and have fun on exotic locations</h2>
+				<!--	<p class="subtitle">4 567 on-line user</p>-->
+					<p class="text">Invite your new sex partners to one of 21 unique locations. Bounty beach, medieval castle, corporate office, cozy apartment, luxury villa or yacht. Choose where you want to come off today!</p>
 					<div class="button-wrap zoom-6">
 						<button class="button white-button">Join Now Free</button>
 					</div>
 				</div>
 			</div>
-		</div>-->
-		<!--<div class="section section-7" data-anchor="sevenSection">-->		
+		</div>
+		<div class="section section-7" data-anchor="sevenSection">		
 			<div class="video-wrap" id="v1">               
 					<video controls="controls" >                 
 						<source src="images/video/video-1.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>                                  
@@ -183,8 +182,8 @@
 							</a>
 							<a>
 								<div class="popup-gallery__title-block">
-										<h3 class="title__sm down"> Gallery-game</h3>
-										<p class="text post">More photo and video</p>
+										<h3 class="title__sm post-7"> Gallery</h3>
+										<p class="text post-77">More photos and videos</p>
 								</div>
 							</a>
 							<a class="popup-link">
@@ -221,6 +220,8 @@
 		<script src="scripts/jquery.jSlots.js"></script>		
 		<script src="scripts/jquery.easing.1.3.js"></script>     
     <script src="scripts/main.js"></script>
+		
+    <!-- endbuild -->
 
 		<script type="text/javascript">$(window).on('load', function () {
 			var $preloader = $('#p_prldr'),
@@ -228,8 +229,7 @@
 			$svg_anm.fadeOut();
 			$preloader.delay(500).fadeOut('slow');
 			});
-	</script>      
-    <!-- endbuild -->
+		</script>      
 
   </body>
 </html>
